crates/plotnik-lib/tests/02-parser/recovery_validation/capture_name_pascal_case.txt
Q = (a) @Name
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:9
  |
1 | Q = (a) @Name
  |         ^^^^^
  |
help: use `@name`
  |
1 - Q = (a) @Name
1 + Q = (a) @name
  |
help: captures become fields in the output
